fixed icon spacing on bottom

--- a/css/master.css
+++ b/css/master.css
@@ -18,7 +18,7 @@ li{
 }
 
 footer{
-  margin-top: 3em;
+  padding-bottom: 1em;
 }
 
 .body{
